--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - ./aviar.sql:/tmp/aviar.sql
+      - ./aviar.sql:/docker-entrypoint-initdb.d/init.sql
+    command: ["--init-file", "/docker-entrypoint-initdb.d/init.sql"]
   aviar:
     build: .
     environment:
@@ -21,3 +22,14 @@ services:
       - db
     ports:
       - 8080:8080
+  # web:
+  #   build:
+  #     context: .\frontend\
+  #     dockerfile: Dockerfile
+  #     args:
+  #       REACT_APP_API_BASE: "https://api.ejemplo.com"
+  #   ports:
+  #     - "80:80"
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - aviar
