conectando frontend al backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     build: .
     environment:
       - jwt_secret_key=f9612ee6cbd06827ff8e43b5cd1fd7ab888b420c71b9ee8f20f96205b35aac6b6984a6bb66d0cae7194a2ac434a68952d4f2ce4ba06ab9ad77ac416ae43545ec
+      - ALLOWED_ORIGIN=http://localhost:3000
       - DB_URL=jdbc:mysql://db:3306/aviar
       - DB_USERNAME=root
       - DB_PASSWORD=root
