--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.servlet.context-path=/api
 
 jwt.secret-key=${JWT_SECRET_KEY}
 
+allowed.origin=${ALLOWED_ORIGIN}
+
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
